--- a/style.css
+++ b/style.css
@@ -238,6 +238,22 @@ input[type="file"]::file-selector-button {
   background-blend-mode: multiply;
 }
 
+.about-image {
+  margin-right: -2rem;
+  margin-left: -2rem;
+  border-radius: 5px;
+  border: 5px solid var(--green-apple);
+  margin-bottom: 1rem;
+  border-radius: 15px;
+  height: 75vh;
+  background-size: cover, cover;
+  background-image: url("blackgradient.jpg"), url("hands.jpg");
+  background-blend-mode: multiply;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
 
 .list-group-item {
   margin-top: 1rem;
